Fixed some minor bugs
- Landing Page popup [x] button
-   Alterations colours
- List page to map page transition
- etc.

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
                         <br>
                         It is difficult to date the exact opening date of Burgess Park as it is the result of the consolidation of several open spaces over a prolonged period of time. At the Parkive we have chosen to classify it’s opening period as 1950-1975 as this is when the initial consolidation of Burgess Park began. You can see some of the original open spaces that were incorporated into Burgess Park depicted on the map (If you look at the ‘Year Opened’ and ‘Alterations’ view modes you will see some areas that are coloured differently to the majority of Burgess Park).
                     </p>
+                    <a class="park_info_overlay_detailed_info_section_text"
                 </div>
                 <hr class="park_info_overlay_section_divider">
                 
