New Parks Added! and minor changes to the scroll bar of the search dropdown menu

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                 <div id="status_defunct" class="key_square"></div>
                 <div class="key_description">Defunct</div>
             </div>
+            <div class="key_row">
+                <div id="status_unknown" class="key_square"></div>
+                <div class="key_description">Unknown</div>
+            </div>
         </div>
         <div id="yearOpened_keys">
             <div class="key_row">
@@ -96,6 +100,10 @@
                 <div id="yo_2000to2024" class="key_square"></div>
                 <div class="key_description">2000-2024</div>
             </div>
+            <div class="key_row">
+                <div id="yo_unknown" class="key_square"></div>
+                <div class="key_description">Unknown</div>
+            </div>
         </div>
         <div id="alterations_keys">
             <div class="key_row">
@@ -113,6 +121,10 @@
             <div class="key_row">
                 <div id="alterations_under_threat" class="key_square"></div>
                 <div class="key_description">Under Threat</div>
+            </div>
+            <div class="key_row">
+                <div id="alterations_unknown" class="key_square"></div>
+                <div class="key_description">Unknown</div>
             </div>
         </div>
         <div id="launchPopup_container">
